documents: Fix error handling for unknown formats for document downloads

https://bugzilla.gnome.org/show_bug.cgi?id=759180